otros cambios de prueba

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
     <h4>Remera Beige Oversize</h4>
       <div class="img-container">
         <img src="imgremeras/RemeBeigeSol.jpg" alt="Producto 2" class="product-image">
-<!--         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
-        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button> -->
+        <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
+        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
         <!-- <span class="etiqueta-agotado">Agotado</span> -->
       </div>
     <h4>Remera beige con bordado Sol de Mayo en color dorado</h4>
@@ -89,8 +89,8 @@
     <h4>Buzo Beige Clasico</h4>
       <div class="img-container">
         <img src="imgbuzos/BuzoBeigeEscudo.jpg" alt="Producto 3" class="product-image">
-<!--         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
-        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button> -->
+        <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
+        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
         <span class="etiqueta-agotado">Agotado</span>
       </div>
     <h4>Buzo Beige con bordado Escudo Nacional</h4>
@@ -101,8 +101,8 @@
     <h4>Buzo Blanco Clasico</h4>
       <div class="img-container">
         <img src="imgbuzos/BuzoBlancoSol.jpg" alt="Producto 4" class="product-image">
-<!--         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
-        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button> -->
+        <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
+        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
         <span class="etiqueta-agotado">Agotado</span>
       </div>
     <h4>Buzo blanco con bordado Sol de Mayo en color dorado</h4>
@@ -113,8 +113,8 @@
     <h4>Remera Blanca Oversize</h4>
       <div class="img-container">
         <img src="imgremeras/RemeBlancaSol.jpg" alt="Producto 5" class="product-image">
-<!--         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
-        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button> -->
+        <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
+        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
         <!-- <span class="etiqueta-agotado">Agotado</span> -->
       </div>
     <h4>Remera blanca con bordado Sol de Mayo en color dorado</h4>
@@ -125,8 +125,8 @@
     <h4>Remera Negra Oversize</h4>
       <div class="img-container">
         <img src="imgremeras/RemeNegraEscudo.jpg" alt="Producto 6" class="product-image">
-<!--         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
-        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button> -->
+        <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
+        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
         <!-- <span class="etiqueta-agotado">Agotado</span> -->
       </div>
     <h4>Remera negra con bordado escudo nacional</h4>
@@ -137,8 +137,8 @@
     <h4>Remera Beige Oversize</h4>
       <div class="img-container">
         <img src="imgremeras/RemeBeigeEscudo.JPG" alt="Producto 7" class="product-image">
-<!--         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
-        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button> -->
+        <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
+        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
         <!-- <span class="etiqueta-agotado">Agotado</span> -->
       </div>
     <h4>Remera beige con bordado escudo nacional</h4>
@@ -149,8 +149,8 @@
     <h4>Buzo Beige Clasico</h4>
       <div class="img-container">
         <img src="imgbuzos/BuzoBeigeSol.jpg" alt="Producto 8" class="product-image">
-<!--         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
-        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button> -->
+        <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
+        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
         <span class="etiqueta-agotado">Agotado</span>
       </div>
     <h4>Buzo Beige con bordado Sol de Mayo en color dorado</h4>
@@ -161,8 +161,8 @@
     <h4>Remera Marron Oversize</h4>
       <div class="img-container">
         <img src="imgremeras/RemeMarronSol.jpg" alt="Producto 9" class="product-image">
-<!--         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
-        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button> -->
+        <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
+        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
         <!-- <span class="etiqueta-agotado">Agotado</span> -->
       </div>
     <h4>Remera marron con bordado Sol de Mayo en color dorado</h4>
@@ -173,8 +173,8 @@
     <h4>Remera Azul Oversize</h4>
       <div class="img-container">
         <img src="imgremeras/RemeAzulBandera.jpg" alt="Producto 10" class="product-image">
-<!--         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
-        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button> -->
+        <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
+        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
         <!-- <span class="etiqueta-agotado">Agotado</span> -->
       </div>
     <h4>Remera Azul con bordado Bandera Argentina</h4>
@@ -185,8 +185,8 @@
     <h4>Remera Blanca Oversize</h4>
       <div class="img-container">
         <img src="imgremeras/RemeBlancaBandera.jpg" alt="Producto 11" class="product-image">
-<!--         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
-        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button> -->
+        <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
+        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
         <!-- <span class="etiqueta-agotado">Agotado</span> -->
       </div>
     <h4>Remera Blanca con bordado Bandera Argentina</h4>
@@ -197,8 +197,8 @@
     <h4>Remera Negra Oversize</h4>
       <div class="img-container">
         <img src="imgremeras/RemeNegraBandera.jpg" alt="Producto 12" class="product-image">
-<!--         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
-        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button> -->
+        <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
+        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
         <!-- <span class="etiqueta-agotado">Agotado</span> -->
       </div>
     <h4>Remera Negra con bordado Bandera Argentina</h4>
@@ -209,8 +209,8 @@
     <h4>Remera Blanca Oversize</h4>
       <div class="img-container">
         <img src="imgremeras/RemeBlancaSolN.jpg" alt="Producto 13" class="product-image">
-<!--         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
-        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button> -->
+        <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
+        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
         <!-- <span class="etiqueta-agotado">Agotado</span> -->
       </div>
     <h4>Remera Blanca con bordado Sol de Mayo negro</h4>
@@ -221,8 +221,8 @@
     <h4>Remera Gris Oversize</h4>
       <div class="img-container">
         <img src="imgremeras/RemeGrisSol.jpg" alt="Producto 14" class="product-image">
-<!--         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
-        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button> -->
+        <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
+        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
         <!-- <span class="etiqueta-agotado">Agotado</span> -->
       </div>
     <h4>Remera Gris con bordado Sol de Mayo gris</h4>
@@ -233,8 +233,8 @@
     <h4>Remera Azul Oversize</h4>
       <div class="img-container">
         <img src="imgremeras/RemeAzulSol.jpg" alt="Producto 15" class="product-image">
-<!--         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
-        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button> -->
+        <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
+        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
         <!-- <span class="etiqueta-agotado">Agotado</span> -->
       </div>
     <h4>Remera Azul con bordado Sol de Mayo dorado</h4>
