--- a/index.html
+++ b/index.html
@@ -241,6 +241,17 @@
 <p class="precio">$32.000</p>
 </div>
 
+<div class="card remeras negro" data-id="producto16">
+    <h4>Remera Negra Oversize</h4>
+      <div class="img-container">
+        <img src="imgremeras/RemeNegraSolN.jpg" alt="Producto 15" class="product-image">
+        <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
+        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
+        <!-- <span class="etiqueta-agotado">Agotado</span> -->
+      </div>
+    <h4>Remera Negra con bordado Sol de Mayo Negro</h4>
+<p class="precio">$32.000</p>
+</div>
 
 </main>
 <footer>
