saque los precios

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <!-- <span class="etiqueta-agotado">Agotado</span> -->
       </div>
     <h4>Remera negra con bordado Sol de Mayo en color dorado</h4>
-<p class="precio">$32.000</p>
+<!-- <p class="precio">$32.000</p> -->
 </div>
 
 <div class="card remeras beige" data-id="producto2">
@@ -82,7 +82,7 @@
         <!-- <span class="etiqueta-agotado">Agotado</span> -->
       </div>
     <h4>Remera beige con bordado Sol de Mayo en color dorado</h4>
-<p class="precio">$32.000</p>
+<!-- <p class="precio">$32.000</p> -->
 </div>
 
 <div class="card buzos beige agotado" data-id="producto3">
@@ -94,7 +94,7 @@
         <span class="etiqueta-agotado">Agotado</span>
       </div>
     <h4>Buzo Beige con bordado Escudo Nacional</h4>
-<p class="precio">$50.000</p>
+<!-- <p class="precio">$50.000</p> -->
 </div>
 
 <div class="card buzos blanco agotado" data-id="producto4">
@@ -106,7 +106,7 @@
         <span class="etiqueta-agotado">Agotado</span>
       </div>
     <h4>Buzo blanco con bordado Sol de Mayo en color dorado</h4>
-<p class="precio">$50.000</p>
+<!-- <p class="precio">$50.000</p> -->
 </div>
 
 <div class="card remeras blanco" data-id="producto5">
@@ -118,7 +118,7 @@
         <!-- <span class="etiqueta-agotado">Agotado</span> -->
       </div>
     <h4>Remera blanca con bordado Sol de Mayo en color dorado</h4>
-<p class="precio">$32.000</p>
+<!-- <p class="precio">$32.000</p> -->
 </div>
 
 <div class="card remeras negro" data-id="producto6">
@@ -130,7 +130,7 @@
         <!-- <span class="etiqueta-agotado">Agotado</span> -->
       </div>
     <h4>Remera negra con bordado escudo nacional</h4>
-<p class="precio">$32.000</p>
+<!-- <p class="precio">$32.000</p> -->
 </div>
 
 <div class="card remeras beige" data-id="producto7">
@@ -142,7 +142,7 @@
         <!-- <span class="etiqueta-agotado">Agotado</span> -->
       </div>
     <h4>Remera beige con bordado escudo nacional</h4>
-<p class="precio">$32.000</p>
+<!-- <p class="precio">$32.000</p> -->
 </div>
 
 <div class="card buzos beige agotado" data-id="producto8">
@@ -154,7 +154,7 @@
         <span class="etiqueta-agotado">Agotado</span>
       </div>
     <h4>Buzo Beige con bordado Sol de Mayo en color dorado</h4>
-<p class="precio">$50.000</p>
+<!-- <p class="precio">$50.000</p> -->
 </div>
 
 <div class="card remeras marron" data-id="producto9">
@@ -166,7 +166,7 @@
         <!-- <span class="etiqueta-agotado">Agotado</span> -->
       </div>
     <h4>Remera marron con bordado Sol de Mayo en color dorado</h4>
-<p class="precio">$32.000</p>
+<!-- <p class="precio">$32.000</p> -->
 </div>
 
 <div class="card remeras azul" data-id="producto10">
@@ -178,7 +178,7 @@
         <!-- <span class="etiqueta-agotado">Agotado</span> -->
       </div>
     <h4>Remera Azul con bordado Bandera Argentina</h4>
-<p class="precio">$32.000</p>
+<!-- <p class="precio">$32.000</p> -->
 </div>
 
 <div class="card remeras blanco" data-id="producto11">
@@ -190,7 +190,7 @@
         <!-- <span class="etiqueta-agotado">Agotado</span> -->
       </div>
     <h4>Remera Blanca con bordado Bandera Argentina</h4>
-<p class="precio">$32.000</p>
+<!-- <p class="precio">$32.000</p> -->
 </div>
 
 <div class="card remeras negro" data-id="producto12">
@@ -202,7 +202,7 @@
         <!-- <span class="etiqueta-agotado">Agotado</span> -->
       </div>
     <h4>Remera Negra con bordado Bandera Argentina</h4>
-<p class="precio">$32.000</p>
+<!-- <p class="precio">$32.000</p> -->
 </div>
 
 <div class="card remeras blanco" data-id="producto13">
@@ -214,7 +214,7 @@
         <!-- <span class="etiqueta-agotado">Agotado</span> -->
       </div>
     <h4>Remera Blanca con bordado Sol de Mayo negro</h4>
-<p class="precio">$32.000</p>
+<!-- <p class="precio">$32.000</p> -->
 </div>
 
 <div class="card remeras gris" data-id="producto14">
@@ -226,7 +226,7 @@
         <!-- <span class="etiqueta-agotado">Agotado</span> -->
       </div>
     <h4>Remera Gris con bordado Sol de Mayo gris</h4>
-<p class="precio">$32.000</p>
+<!-- <p class="precio">$32.000</p> -->
 </div>
 
 <div class="card remeras azul" data-id="producto15">
@@ -238,7 +238,7 @@
         <!-- <span class="etiqueta-agotado">Agotado</span> -->
       </div>
     <h4>Remera Azul con bordado Sol de Mayo dorado</h4>
-<p class="precio">$32.000</p>
+<!-- <p class="precio">$32.000</p> -->
 </div>
 
 <div class="card remeras negro" data-id="producto16">
@@ -250,7 +250,7 @@
         <!-- <span class="etiqueta-agotado">Agotado</span> -->
       </div>
     <h4>Remera Negra con bordado Sol de Mayo Negro</h4>
-<p class="precio">$32.000</p>
+<!-- <p class="precio">$32.000</p> -->
 </div>
 
 </main>
